--- a/docs/sr/week02/02.md
+++ b/docs/sr/week02/02.md
@@ -1,10 +1,10 @@
 ---
-lang: es
+lang: sr
 lang-ref: ch.02
-title: Semana 2
+title: 2. Nedelja
 date: 3 February 2020
-translation-date: 30 Mar 2020
-translator: juanmartinezitm
+translation-date: 15 Dec 2020
+translator: EmaPajic
 ---
 
 <!--
@@ -13,9 +13,9 @@ translator: juanmartinezitm
 We start by understanding what parametrised models are and then discuss what a loss function is. We then look at Gradient-based methods and how it's used in the backpropagation algorithm in a traditional neural network. We conclude this section by learning how to implement a neural network in PyTorch followed by a discussion on a more generalized form of backpropagation.
 -->
 
-## Lección parte A
+## Lekcija, deo A
 
-Comenzamos entendiendo qué son los modelos parametrizados y después discutimos qué es una función de pérdida. Después vemos métodos basados en gradientes y cómo se utilizan en el algoritmo de propagación hacia atrás en una red neuronal tradicional. Concluimos esta sección aprendiendo cómo implementar una red neuronal en PyTorch seguido de una discusión en una forma más generalizada de propagación hacia atrás.
+Započinjemo razumevanjem šta su parametarski modeli i diskutujemo šta je funkcija gubitka. Zatim razmatramo metode zasnovane na gradijentu i kako se koriste u algoritmu propagacije unazad u tradicionalnoj neuronskoj mreži. Zaključujemo ovu sekciju učenjem kako implementirati neuronsku mrežu u PyTorch-u i diskusijom o generalizovanijoj formi propagacije unazad.
 
 <!--
 ## Lecture part B
@@ -23,9 +23,9 @@ Comenzamos entendiendo qué son los modelos parametrizados y después discutimos
 We begin with a concrete example of backpropagation and discuss the dimensions of Jacobian matrices. We then look at various basic neural net modules and compute their gradients, followed by a brief discussion on softmax and logsoftmax. The other topic of discussion in this part is Practical Tricks for backpropagation.
 -->
 
-## Lección parte B
+## Lekcija, deo B
 
-Comenzamos con un ejemplo concreto de propagación hacia atrás y discutimos las dimensiones de las de matrices Jacobianas. Después vemos varios módulos básicos de redes neuronales y calculamos sus gradientes, siguiendo con una breve discusión de *softmax* y *logsoftmax*. El otro tema de discusión en esta parte es Trucos prácticos para propagación hacia atrás. 
+Počicnjemo sa konkretnim primerom propagacije unazad i diskutujemo dimenzije Jakobijevih matrica. Zatim posmatramo razne bazične module neuronskih mreža i računamo njihove gradijente, uz kratku diskusiju o softmax i logsoftmax funkcijama. Druga tema ove lekcije je praktični trikovi propagacije unazad.
 
 <!--
 ## Practicum
@@ -33,6 +33,6 @@ Comenzamos con un ejemplo concreto de propagación hacia atrás y discutimos las
 We give a brief introduction to supervised learning using artificial neural networks. We expound on the problem formulation and conventions of data used to train these networks. We also discuss how to train a neural network for multi class classification, and how to perform inference once the network is trained.
 -->
 
-## Práctica
+## Praktikum
 
-Damos una breve introducción al aprendizaje supervisado utilizando redes neuronales artificiales. Exponemos la formulación del problema y convenciones de los datos utilizados para entrenar estas redes. También discutimos cómo entrenar una red neuronal para realizar una clasificación multi clase, y cómo realizar infrerencias una vez que la red se ha entrenado.
+Prolazimo kroz kratki uvod u nadgledano učenje pomoću neuronskih mreža. Objašnjavamo problem formulacije i konvencije podataka korišćenih za obučavanje ovih mreža. Takođe diskutujemo kako obučiti neuronsku mrežu za klasifikaciju više klasa i kako vršiti predikciju nakon što je mreža obučena.
