--- a/docs/sr/week02/02-1.md
+++ b/docs/sr/week02/02-1.md
@@ -1,12 +1,12 @@
 ---
-lang: es
+lang: sr
 lang-ref: ch.02-1
 lecturer: Yann LeCun
-title: Introducción a gradiente descendente y el algoritmo de propagación hacia atrás
+title: Uvod u gradijentni spust i propagaciju unazad
 authors: Amartya Prasad, Dongning Fang, Yuxin Tang, Sahana Upadhya
 date: 3 Feb 2020
-translation-date: 30 Mar 2020
-translator: juanmartinezitm
+translation-date: 15 Dec 2020
+translator: EmaPajic
 ---
 <!--
 ## [Gradient Descent optimization algorithm](https://www.youtube.com/watch?v=d9vdh3b787Y&t=29s)
@@ -39,37 +39,37 @@ Examples of parametrised functions -
   Parameterized models could also involve complicated functions.
 -->
 
-## [Algoritmo de optimización Descenso de Gradiente](https://www.youtube.com/watch?v=d9vdh3b787Y&t=29s)
+## [Optimizacioni algoritam gradijentni spust](https://www.youtube.com/watch?v=d9vdh3b787Y&t=29s)
 
 
-### Modelos parametrizados
+### Parametarski modeli
 
 $$
 \bar{y} = G(x,w)
 $$
 
-Los modelos parametrizados son simplemente funciones que dependen de entradas y parámetros entrenables. No hay una diferencia fundamental entre los dos, excepto que los parámetros entrenables se comparten entre las muestras de entrenamiento, mientras que la entrada varia de muestra a muestra. En la mayoría de los marcos conceptuales de aprendizaje profundo, los parámetros son implícitos, esto es, que no se indican cuando la función se llama. Se 'almacenan dentro de la función', sea dicho, por lo menos en las versiones de modelos orientadas a objetos.
+Parametarski modeli su samo funkcije koje zavise od ulaza i parametara koje možemo da obučimo. Ne postoji fundamentalna razlika između ta 2, osim što su obučljivi parametri deljeni između primera iz obučavajućeg skupa, dok ulaz varira od odbirka do odbirka. U većini radnih okvira dubokog učenja, parametri su implicitni, to jest, ne prosleđuju se kada se funkcija pozove. Oni su "sačuvani u funkciji", bar se tako može reći, makar u objektno-orijentisanim verzijama modela.
 
-El modelo parametrizado (función) toma una entrada, tiene un vector de parámetros y produce una salida. En el aprendizaje supervisado, esta salida va a la función de costo ($C(y,\bar{y}$)), que compara la verdadera salida (${y}$) con la salida del modelo ($\bar{y}$). La gráfica de cómputo para este modelo se muestra en la Figura 1.
+Parametarski modeli (funkcije) uzimaju ulaz, imaju vektor parametara i kreiraju izlaz. U nadgledanom učenju, ovaj izlaz ulazi u funkciju cene ($C(y,\bar{y}$)), koja poredi pravi izlaz (${y}$) sa izlazom modela ($\bar{y}$). Graf računanja ovog modela nalazi se na Slici 1.
 
 | <center><img src="{{site.baseurl}}/images/week02/02-1/Figure1.jpg" alt="Figure1" style="zoom: 33%;" /></center> |
-| <center>Figure 1: Representación de la gráfica de computación para un Modelo Parametrizado</center>|
+| <center>Slika 1: Prikaz grafa računanja parametarskog modela</center>|
 
-Ejemplos de funciones parametrizadas -
+Primeri parametarskih funkcija -
 
-- Modelo Lineal - Suma ponderada de componentes del vector de entrada:
+- Linearan model - Težinska suma komponenti ulaznog vektora:
 
   $$
   \bar{y} = \sum_i w_i x_i, C(y,\bar{y}) = \Vert y - \bar{y}\Vert^2
   $$
 
-- Vecino más cercano - Existe una entrada x y una matriz de ponderación W con cada fila de la matriz indexada por k. La salida es el valor de k que corresponde a la fila de W más cercana a x:
+- Najbliži sused - Postoje ulaz x i matrica težina W sa svakim redom indeksiranim po k. Izlaz je vrednost k koja odgovara redu W koji je najbliži x:
 
   $$
   \bar{y} = \underset{k}{\arg\min} \Vert x - w_{k,.} \Vert^2
   $$
 
-  Los modelos parametrizados pueden también involucrar funciones complejas.
+  Parametarski modeli takođe mogu da budu komplikovane funkcije.
 <!--
 #### Block diagram notations for computation graphs
 
@@ -93,18 +93,18 @@ Ejemplos de funciones parametrizadas -
     - Has an implicit scalar output
     - Takes multiple inputs and outputs a single value (usually the distance between the inputs)
 -->
-#### Notación en diagrama de bloques para gráficas computacionales
+#### Blok dijagram notacija za graf računanja
 
--Variables (tensor, escalar, contínua, discreta)
+-Promenljive (tenzor, skalar, kontinualni, diskretni)
     - <img src="{{site.baseurl}}/images/week02/02-1/x.PNG" alt="x" style="zoom:50%;" /> es una entrada observada al sistema
     - <img src="{{site.baseurl}}/images/week02/02-1/y.PNG" alt="y" style="zoom:50%;" /> es una variable calculada que se produce por una función determinista
 
-- Funciones deterministas
+- Determinističke funkcije
 
     <img src="{{site.baseurl}}/images/week02/02-1/deterministic_function.PNG" alt="deterministic_function" style="zoom:50%;" />
 
-    - Toman múltiples entradas y pueden producir múltiples salidas. 
-    - Tienen una variable de parámetro implícita (${w}$)
+    - Imaju više ulaza i proizvode više izlaza. 
+    - Imaju implicitnu parametarsku promenljivu (${w}$)
     - El lado redondeado indica la dirección en la que es fácil de calcular. En el diagrama de arriba, es más fácil calcular ${\bar{y}}$ a partir de ${x}$, que al revés.
 
 - Función escalar
